--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,8 @@ testpaths = tests
 [coverage:run]
 branch = True
 source = panos
+
+[flake8]
+max-complexity = 10
+max-line-length = 127
+statistics = True
