style: flake8, black, isort

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,5 +73,6 @@ jobs:
 
       - name: Install dependencies
         run: poetry install
-      # - name: Check formatting
-      #   run: poetry run make check-format
+
+      - name: Check formatting
+        run: poetry run make check-format
