feat: move reports into panos_util package

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,6 @@ testpaths = tests
 [coverage:run]
 branch = True
 source = panos_util
+omit =
+    panos_util/block_report.py
+    panos_util/threat_report.py
