--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,6 +110,7 @@ jobs:
           semantic-release@^17.0.4 \
           @semantic-release/exec@^5.0.0 \
           @semantic-release/git@^9.0.0 \
+          @semantic-release/changelog@^5.0.1 \
           conventional-changelog-conventionalcommits@^4.2.3
 
       - name: Set up Python 3.8
