ci: Cleanup workflow, add release action

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -10,6 +10,7 @@
             "prerelease": true
         }
     ],
+    "preset": "conventionalcommits",
     "plugins": [
         "@semantic-release/commit-analyzer",
         "@semantic-release/release-notes-generator",
@@ -49,6 +50,5 @@
                 "successComment": ":tada: This ${issue.pull_request ? 'PR is included' : 'issue has been resolved'} in version ${nextRelease.version} :tada:\n\nThe release is available on [PyPI](https://pypi.org/project/pan-os-python/) and [GitHub release](<github_release_url>)\n\n> Posted by [semantic-release](https://github.com/semantic-release/semantic-release) bot"
             }
         ]
-    ],
-    "preset": "conventionalcommits"
+    ]
 }
