--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install Poetry
-        uses: dschep/install-poetry-action@v1.3
+        uses: Gr1N/setup-poetry@v3
 
       - name: Get poetry cache directory
         id: poetry-cache
